--- a/onix/docs/020 输入输出.md
+++ b/onix/docs/020 输入输出.md
@@ -2,10 +2,21 @@
 
 CPU 外部设备寄存器的编号就是端口号，65536 个
 
+https://kviccn.github.io/series/%E8%80%81%E6%9D%8E%E6%95%99%E4%BD%A0%E5%86%99%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F/0x03-%E6%98%BE%E5%8D%A1%E9%A9%B1%E5%8A%A8.html
+
+这里有其他人的详细说明：
+
+
+显卡内部的两个光标寄存器：
 - CRT 地址寄存器 0x3D4
 - CRT 数据寄存器 0x3D5
+
 - CRT 光标位置 - 高位 0xE
 - CRT 光标位置 - 低位 0xF
+
+汇编 in和呕吐这两个命令能让cpu通过io口去找对应的端口读取数据和输出数据。
+in <寄存器> <端口>
+out <端口><数据>
 
 ## 参考文献
 
