字符串基础知识

--- a/onix/docs/020 输入输出.md
+++ b/onix/docs/020 输入输出.md
@@ -14,6 +14,30 @@ https://kviccn.github.io/series/%E8%80%81%E6%9D%8E%E6%95%99%E4%BD%A0%E5%86%99%E6
 - CRT 光标位置 - 高位 0xE
 - CRT 光标位置 - 低位 0xF
 
+```cpp
+void kernel_init()
+{
+    // 获取当前光标位置
+    //先向地址寄存器0x3d4写入索引值14，通过数据寄存器0x3d5读取出光标位置的高8位，
+    //再向地址寄存器0x3d4写入索引值15，通过数据寄存器0x3d5读取出光标位置的低8位。
+    outb(CRT_ADDR_REG,CRT_CURSOR_H);
+    u16 pos = inb(CRT_DATA_REG) << 8;
+    outb(CRT_ADDR_REG,CRT_CURSOR_L);
+    pos |= inb(CRT_DATA_REG);
+
+    //写入光标位置
+    //先向地址寄存器0x3d4写入索引值14，通过数据寄存器0x3d5写入光标位置的高8位，
+    //再向地址寄存器0x3d4写入索引值15，通过数据寄存器0x3d5写入光标位置的低8位。
+    outb(CRT_ADDR_REG, CRT_CURSOR_H);
+    outb(CRT_DATA_REG, 0);
+    outb(CRT_ADDR_REG, CRT_CURSOR_L);
+    outb(CRT_DATA_REG, 123);
+
+}
+```
+
+    
+
 汇编 in和呕吐这两个命令能让cpu通过io口去找对应的端口读取数据和输出数据。
 in <寄存器> <端口>
 out <端口><数据>
