命令行显示驱动

--- a/onix/docs/020 输入输出.md
+++ b/onix/docs/020 输入输出.md
@@ -38,7 +38,7 @@ void kernel_init()
 
     
 
-汇编 in和呕吐这两个命令能让cpu通过io口去找对应的端口读取数据和输出数据。
+汇编 in和out这两个命令能让cpu通过io口去找对应的端口读取数据和输出数据。
 in <寄存器> <端口>
 out <端口><数据>
 
