--- a/onix/docs/023可变参数原理.md
+++ b/onix/docs/023可变参数原理.md
@@ -9,6 +9,23 @@ int printf(const char* format, ...);
 - `va_arg`：获取下一个参数
 - `va_end`：结束可变参数
 
+```c++
+//举例：
+void test_args(int cnt, ...)
+{
+    va_list args;
+    va_start(args, cnt);
+
+    int arg;
+    while (cnt--)
+    {
+        arg = va_arg(args, int);
+    }
+    va_end(args);
+}
+```
+
+
 # 参考文献
 
 - <https://en.cppreference.com/w/cpp/header/cstdarg>
