通过调用cmos中的bcd数据实现轮询中断和闹钟中断

--- a/onix/docs/04中断和时钟/038实时时钟.md
+++ b/onix/docs/04中断和时钟/038实时时钟.md
@@ -14,7 +14,7 @@ RTC Real Time Clock 实时时钟
 - 0: 更新周期至少在 488 微秒内不会启动，换句话说，此时访问 CMOS RAM 中的时间、日历和闹钟信息是安全的
 - 1: 正处于更新周期，或者马上就要启动
 
-如果寄存器 B 的 SET 位不是 1 , 而且在分频电路已正确配置的情况下，更新周期每秒发生一次，在此期间，会增加保存的日期和时间、检查数据是否因超出范围而溢出（比如，31 号之后是下月 1 号，而不是 32 号)，还要检查是否到了闹钟时间，最后，更新之后的数据还要写回原来的位置；
+如果寄存器 B 的 SET 位不是 1 , 而且在分频电路已正确配置的情况下，更新周期每秒发生一次，在此期间，会增加保存的日期和时间、检查数据是否因超出范围而溢出（比如，31 号之后是下月 1 号，而不是 32 号），还要检查是否到了闹钟时间，最后，更新之后的数据还要写回原来的位置；
 
 更新周期至少会在 UIP 置为 1 后的 488μs 内开始，而且整个周期的完成时间不会多于 1984 μs, 在此期间，和日期时间有关的存储单元 (0x00 ~ 0x09) 会暂时脱离外部总线。
 
